[package]
name = "async-channel"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v1.x.y" git tag
version = "1.9.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
rust-version = "1.45"
description = "Async multi-producer multi-consumer channel"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/async-channel"
keywords = ["mpmc", "mpsc", "spmc", "chan", "futures"]
categories = ["asynchronous", "concurrency"]
exclude = ["/.*"]

[dependencies]
concurrent-queue = "2"
event-listener = "2.4.0"
event-listener-strategy = { git = "https://github.com/smol-rs/event-listener" }
futures-core = "0.3.5"
pin-project-lite = "0.2.11"

[dev-dependencies]
easy-parallel = "3"
futures-lite = "1"

[patch.crates-io]
event-listener = { git = "https://github.com/smol-rs/event-listener" }
