[package]
name = "async-channel"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v1.x.y" git tag
version = "1.9.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
rust-version = "1.59"
description = "Async multi-producer multi-consumer channel"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/async-channel"
keywords = ["mpmc", "mpsc", "spmc", "chan", "futures"]
categories = ["asynchronous", "concurrency"]
exclude = ["/.*"]

[dependencies]
concurrent-queue = { version = "2", default-features = false }
event-listener = { version = "2.4.0", default-features = false }
event-listener-strategy = { git = "https://github.com/smol-rs/event-listener", default-features = false }
futures-core = { version = "0.3.5", default-features = false }
pin-project-lite = "0.2.11"

[dev-dependencies]
easy-parallel = "3"
futures-lite = "1"

[features]
default = ["std"]
std = ["concurrent-queue/std", "event-listener/std", "event-listener-strategy/std"]

[patch.crates-io]
event-listener = { git = "https://github.com/smol-rs/event-listener", default-features = false }
